# fastapi-micro

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json
app/: main.py
app/microservices/auth/: .env  main.py
app/microservices/auth/core/: config.py  db.py  deps.py  mw.py  permissions.py  roles.py  security.py
app/microservices/auth/grpc/: auth.proto  auth_pb2.py  auth_pb2_grpc.py  server.py
app/microservices/auth/models/: user.py
app/microservices/auth/repos/: user.py
app/microservices/auth/schemas/: auth.py
app/microservices/auth/services/: user.py
app/microservices/auth/utils/: db.py
app/microservices/comments/: main.py
app/microservices/matches/: main.py
app/microservices/media/: main.py
app/microservices/news/: main.py
app/microservices/news_microservice/: main.py  news.proto  news_pb2.py  news_pb2_grpc.py
app/microservices/users/: main.py
app/microservices/users_microservice/: main.py  users.proto  users_pb2.py  users_pb2_grpc.py
app/models/: __init__.py
app/utils/: crud.py  db.py  handlers.py  models.py  mongo.py  restclient.py
conf/: nginx.conf  nginx.conf.template
data/: nginx.conf
docs/: save.txt
migrations/: env.py
migrations/auth/: alembic.ini  env.py
migrations/matches/: alembic.ini  env.py
migrations/media/: alembic.ini  env.py
migrations/users/: alembic.ini  env.py
scripts/: copymicro.py  gen_env.sh  gen_nginx_conf.sh  install_docker.sh  newmicro.py  pg_check.sh  pg_migrate.py  run.sh  setup_ssl.sh  setup_ssl_mock.sh
(+39 files in other folders)
