[tool.poetry]
name = "poetry-kokoc"
version = "0.1.0"
description = ""
authors = ["vladgenyuk29 <vlad.genyuk@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
grpcio = "^1.66.2"
grpcio-tools = "^1.66.2"
uvicorn = "^0.31.0"
alembic = "^1.13.3"
sqlalchemy = "^2.0.35"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.5.2"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
python-jose-cryptodome = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
